log/build_2025-09-02_22-15-24/simple_move/stdout_stderr.log
running egg_info
creating ../../../../build/simple_move/simple_move.egg-info
writing ../../../../build/simple_move/simple_move.egg-info/PKG-INFO
writing dependency_links to ../../../../build/simple_move/simple_move.egg-info/dependency_links.txt
writing entry points to ../../../../build/simple_move/simple_move.egg-info/entry_points.txt
writing requirements to ../../../../build/simple_move/simple_move.egg-info/requires.txt
writing top-level names to ../../../../build/simple_move/simple_move.egg-info/top_level.txt
writing manifest file '../../../../build/simple_move/simple_move.egg-info/SOURCES.txt'
reading manifest file '../../../../build/simple_move/simple_move.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../../../build/simple_move/simple_move.egg-info/SOURCES.txt'
running build
running build_py
creating /home/christopher/Mobile-Robots-2026-1/build/simple_move/build
creating /home/christopher/Mobile-Robots-2026-1/build/simple_move/build/lib
creating /home/christopher/Mobile-Robots-2026-1/build/simple_move/build/lib/simple_move
copying simple_move/path_follower.py -> /home/christopher/Mobile-Robots-2026-1/build/simple_move/build/lib/simple_move
copying simple_move/__init__.py -> /home/christopher/Mobile-Robots-2026-1/build/simple_move/build/lib/simple_move
copying simple_move/ros_basics.py -> /home/christopher/Mobile-Robots-2026-1/build/simple_move/build/lib/simple_move
running install
running install_lib
copying /home/christopher/Mobile-Robots-2026-1/build/simple_move/build/lib/simple_move/path_follower.py -> /home/christopher/Mobile-Robots-2026-1/install/simple_move/lib/python3.12/site-packages/simple_move
copying /home/christopher/Mobile-Robots-2026-1/build/simple_move/build/lib/simple_move/__init__.py -> /home/christopher/Mobile-Robots-2026-1/install/simple_move/lib/python3.12/site-packages/simple_move
copying /home/christopher/Mobile-Robots-2026-1/build/simple_move/build/lib/simple_move/ros_basics.py -> /home/christopher/Mobile-Robots-2026-1/install/simple_move/lib/python3.12/site-packages/simple_move
byte-compiling /home/christopher/Mobile-Robots-2026-1/install/simple_move/lib/python3.12/site-packages/simple_move/ros_basics.py to ros_basics.cpython-312.pyc
  File "/home/christopher/Mobile-Robots-2026-1/install/simple_move/lib/python3.12/site-packages/simple_move/ros_basics.py", line 44
    self.obstacle_detected = msg.ranges[len(msf.ranges)]//2]<1.0
                                                           ^
SyntaxError: unmatched ']'

running install_data
creating /home/christopher/Mobile-Robots-2026-1/install/simple_move/share/ament_index
creating /home/christopher/Mobile-Robots-2026-1/install/simple_move/share/ament_index/resource_index
creating /home/christopher/Mobile-Robots-2026-1/install/simple_move/share/ament_index/resource_index/packages
copying resource/simple_move -> /home/christopher/Mobile-Robots-2026-1/install/simple_move/share/ament_index/resource_index/packages
copying package.xml -> /home/christopher/Mobile-Robots-2026-1/install/simple_move/share/simple_move
running install_egg_info
Copying ../../../../build/simple_move/simple_move.egg-info to /home/christopher/Mobile-Robots-2026-1/install/simple_move/lib/python3.12/site-packages/simple_move-0.0.0-py3.12.egg-info
running install_scripts
Installing path_follower script to /home/christopher/Mobile-Robots-2026-1/install/simple_move/lib/simple_move
Installing ros_basics script to /home/christopher/Mobile-Robots-2026-1/install/simple_move/lib/simple_move
writing list of installed files to '/home/christopher/Mobile-Robots-2026-1/build/simple_move/install.log'
